--- a/Keras RNN.ipynb
+++ b/Keras RNN.ipynb
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "2e66c821-6cf2-4cd4-9801-4eb96164f426"
+        "outputId": "9eab7faf-61aa-460b-b73c-72e188c6326c"
       },
       "cell_type": "code",
       "source": [
@@ -66,7 +66,7 @@
         "])\n",
         "model.summary()"
       ],
-      "execution_count": 356,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,7 +74,7 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "simple_rnn_61 (SimpleRNN)    (None, 1)                 3         \n",
+            "simple_rnn (SimpleRNN)       (None, 1)                 3         \n",
             "=================================================================\n",
             "Total params: 3\n",
             "Trainable params: 3\n",
@@ -93,26 +93,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "2e5f3c08-34c9-49fb-e743-290c10e8c7c0"
+        "outputId": "af17216b-7511-4e5f-fe98-b0d380d1b382"
       },
       "cell_type": "code",
       "source": [
         "model.get_weights()"
       ],
-      "execution_count": 357,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[array([[-0.21311605],\n",
-              "        [-1.3135166 ]], dtype=float32), array([[1.]], dtype=float32)]"
+              "[array([[-1.0456531 ],\n",
+              "        [-0.19413507]], dtype=float32), array([[-1.]], dtype=float32)]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 357
+          "execution_count": 3
         }
       ]
     },
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5576967e-653b-4162-c002-0f0e59cdcf94"
+        "outputId": "2dfbe63c-2e82-4482-ce85-8ddda35d8eba"
       },
       "cell_type": "code",
       "source": [
@@ -145,7 +145,7 @@
         "x = x.reshape(1,1,2)\n",
         "model.predict(x)"
       ],
-      "execution_count": 359,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 359
+          "execution_count": 5
         }
       ]
     },
@@ -179,7 +179,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "295642fa-f1ad-448a-81b3-81892b3ebb6d"
+        "outputId": "3a89f23c-c190-4677-a2a3-e02e779f7c31"
       },
       "cell_type": "code",
       "source": [
@@ -193,7 +193,7 @@
         "])\n",
         "model.summary()"
       ],
-      "execution_count": 360,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "simple_rnn_62 (SimpleRNN)    (None, 1)                 3         \n",
+            "simple_rnn_1 (SimpleRNN)     (None, 1)                 3         \n",
             "=================================================================\n",
             "Total params: 3\n",
             "Trainable params: 3\n",
@@ -233,7 +233,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "a725694c-2617-4370-a9f0-5e9a0fd596e6"
+        "outputId": "760ffc15-5e2a-4510-aea0-d1fca702bc92"
       },
       "cell_type": "code",
       "source": [
@@ -242,7 +242,7 @@
         "print(x)\n",
         "model.predict(x)"
       ],
-      "execution_count": 362,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 362
+          "execution_count": 8
         }
       ]
     },
@@ -274,7 +274,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "35d9af21-d366-4e11-8729-c1dc44a4e0f5"
+        "outputId": "dbf319dd-0627-4357-80ad-3454ac8a6478"
       },
       "cell_type": "code",
       "source": [
@@ -283,7 +283,7 @@
         "print(x)\n",
         "model.predict(x)"
       ],
-      "execution_count": 363,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 363
+          "execution_count": 9
         }
       ]
     },
@@ -315,7 +315,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "424d8eaf-1ad3-4e1e-b675-54d023745ef2"
+        "outputId": "0d4e73c4-a519-4b7e-9324-4653a3293e6a"
       },
       "cell_type": "code",
       "source": [
@@ -324,7 +324,7 @@
         "print(x)\n",
         "model.predict(x)"
       ],
-      "execution_count": 364,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +344,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 364
+          "execution_count": 10
         }
       ]
     },
@@ -366,7 +366,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "c6b8b48e-cbd9-4a38-a36e-cc86e8966bae"
+        "outputId": "2658c6f1-a467-4513-f40b-d3618f476fe2"
       },
       "cell_type": "code",
       "source": [
@@ -380,7 +380,7 @@
         "])\n",
         "model.summary()"
       ],
-      "execution_count": 365,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +388,7 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "simple_rnn_63 (SimpleRNN)    (None, 1)                 3         \n",
+            "simple_rnn_2 (SimpleRNN)     (None, 1)                 3         \n",
             "=================================================================\n",
             "Total params: 3\n",
             "Trainable params: 3\n",
@@ -420,7 +420,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "e4244f51-4515-468a-ca17-24a98fface2a"
+        "outputId": "277d002d-e68e-419f-ef0d-0e04488732c2"
       },
       "cell_type": "code",
       "source": [
@@ -429,7 +429,7 @@
         "print(x)\n",
         "model.predict(x) == 2 * 7 + 3 * 11 + 5 * 13"
       ],
-      "execution_count": 367,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 367
+          "execution_count": 13
         }
       ]
     },
@@ -472,7 +472,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "fc8e3f52-ba7e-4e14-f653-57131942367d"
+        "outputId": "bece2e30-dace-4b71-a05d-18b7421e1e8b"
       },
       "cell_type": "code",
       "source": [
@@ -481,7 +481,7 @@
         "print(x)\n",
         "model.predict(x) == 2 * 7 + 3 * 11 + 5 * 13"
       ],
-      "execution_count": 368,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 368
+          "execution_count": 14
         }
       ]
     },
@@ -542,7 +542,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "bd884834-9fa4-45d5-ac6c-b97b86ddb6e0"
+        "outputId": "0dbad691-3b66-45fe-eb8d-151035827e8d"
       },
       "cell_type": "code",
       "source": [
@@ -556,7 +556,7 @@
         "for i in range(3):\n",
         "    print(get_bit(i, 8))"
       ],
-      "execution_count": 369,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +600,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "ff2b4b33-446c-4494-e0ae-140add1877a2"
+        "outputId": "b48f42e2-2e8d-4005-84b8-3e78a5295667"
       },
       "cell_type": "code",
       "source": [
@@ -608,7 +608,7 @@
         "print(x[i])\n",
         "print(y[i])"
       ],
-      "execution_count": 371,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +642,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5ca0cb73-cd21-4bb7-e6d7-85a5866aa1f9"
+        "outputId": "569e80e2-93f3-4043-d07d-5b759e8c8a08"
       },
       "cell_type": "code",
       "source": [
@@ -651,7 +651,7 @@
         "x = np.array(x)\n",
         "x.shape"
       ],
-      "execution_count": 373,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -663,7 +663,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 373
+          "execution_count": 19
         }
       ]
     },
@@ -675,14 +675,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fde6dd44-739c-4bfe-f22d-719eed03bf57"
+        "outputId": "7787d0ee-aef6-458d-96a6-ff40f9b6f197"
       },
       "cell_type": "code",
       "source": [
         "y = np.array(y)\n",
         "y.shape"
       ],
-      "execution_count": 374,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 374
+          "execution_count": 20
         }
       ]
     },
@@ -716,7 +716,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 207
         },
-        "outputId": "acbbce78-02b6-418a-d4a7-86e4010b6fa9"
+        "outputId": "24aba294-b241-4332-df9b-1745d79cd9dd"
       },
       "cell_type": "code",
       "source": [
@@ -725,12 +725,13 @@
         "time_steps = 8    # doesn't change the number of params\n",
         "\n",
         "model = keras.Sequential([\n",
-        "        SimpleRNN(cell, activation='relu', return_sequences=True, use_bias=False, input_shape=(time_steps, input_size)),\n",
+        "        #SimpleRNN(cell, activation='relu', return_sequences=True, use_bias=False, input_shape=(time_steps, input_size)),\n",
+        "        LSTM(cell, activation='relu', return_sequences=True, use_bias=False, input_shape=(time_steps, input_size)),\n",
         "        Dense(1, activation='relu', use_bias=False)    \n",
         "])\n",
         "model.summary()"
       ],
-      "execution_count": 375,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,12 +739,12 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "simple_rnn_64 (SimpleRNN)    (None, 8, 8)              80        \n",
+            "lstm (LSTM)                  (None, 8, 8)              320       \n",
             "_________________________________________________________________\n",
-            "dense_41 (Dense)             (None, 8, 1)              8         \n",
+            "dense (Dense)                (None, 8, 1)              8         \n",
             "=================================================================\n",
-            "Total params: 88\n",
-            "Trainable params: 88\n",
+            "Total params: 328\n",
+            "Trainable params: 328\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
@@ -759,7 +760,7 @@
       },
       "cell_type": "code",
       "source": [
-        "model.compile(optimizer='adam', \n",
+        "model.compile(optimizer='adam', # tf.keras.optimizers.SGD(lr=0.01),\n",
         "              loss='mean_squared_error',\n",
         "              metrics=['accuracy'])"
       ],
@@ -772,29 +773,39 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 207
+          "height": 380
         },
-        "outputId": "15618156-800b-41a3-bbf8-7b63523a5a01"
+        "outputId": "54a57432-ddd2-4369-c599-ae65ad810b91"
       },
       "cell_type": "code",
       "source": [
-        "model.fit(x, y, epochs=5, batch_size=16)  "
+        "model.fit(x, y, epochs=10)  "
       ],
-      "execution_count": 377,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/5\n",
-            "65536/65536 [==============================] - 11s 173us/step - loss: 0.0792 - acc: 0.9019\n",
-            "Epoch 2/5\n",
-            "65536/65536 [==============================] - 9s 130us/step - loss: 4.9192e-05 - acc: 1.0000\n",
-            "Epoch 3/5\n",
-            "65536/65536 [==============================] - 9s 132us/step - loss: 2.3435e-05 - acc: 1.0000\n",
-            "Epoch 4/5\n",
-            "65536/65536 [==============================] - 9s 139us/step - loss: 1.3780e-05 - acc: 1.0000\n",
-            "Epoch 5/5\n",
-            "65536/65536 [==============================] - 9s 136us/step - loss: 8.7074e-06 - acc: 1.0000\n"
+            "Epoch 1/10\n",
+            "65536/65536 [==============================] - 11s 170us/step - loss: 0.2086 - acc: 0.6860\n",
+            "Epoch 2/10\n",
+            "65536/65536 [==============================] - 10s 156us/step - loss: 0.0049 - acc: 0.9980\n",
+            "Epoch 3/10\n",
+            "65536/65536 [==============================] - 10s 157us/step - loss: 3.6902e-04 - acc: 1.0000\n",
+            "Epoch 4/10\n",
+            "65536/65536 [==============================] - 10s 159us/step - loss: 1.4697e-04 - acc: 1.0000\n",
+            "Epoch 5/10\n",
+            "65536/65536 [==============================] - 10s 159us/step - loss: 8.1410e-05 - acc: 1.0000\n",
+            "Epoch 6/10\n",
+            "65536/65536 [==============================] - 10s 156us/step - loss: 5.3531e-05 - acc: 1.0000\n",
+            "Epoch 7/10\n",
+            "65536/65536 [==============================] - 10s 157us/step - loss: 3.9429e-05 - acc: 1.0000\n",
+            "Epoch 8/10\n",
+            "65536/65536 [==============================] - 10s 158us/step - loss: 3.0856e-05 - acc: 1.0000\n",
+            "Epoch 9/10\n",
+            "65536/65536 [==============================] - 10s 157us/step - loss: 2.4009e-05 - acc: 1.0000\n",
+            "Epoch 10/10\n",
+            "65536/65536 [==============================] - 10s 159us/step - loss: 1.6722e-05 - acc: 1.0000\n"
           ],
           "name": "stdout"
         },
@@ -802,13 +813,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f52f9ba9b70>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f11e2fd5d68>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 377
+          "execution_count": 23
         }
       ]
     },
@@ -820,7 +831,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5329ff2c-4b32-4bb7-a22e-1241e0dee16b"
+        "outputId": "922ffa5a-d995-4421-a390-f58af3b45f86"
       },
       "cell_type": "code",
       "source": [
@@ -839,7 +850,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 378,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,9 +862,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 378
+          "execution_count": 24
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "tQUX0HR1rytu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
