--- a/Keras RNN.ipynb
+++ b/Keras RNN.ipynb
@@ -52,13 +52,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "9eab7faf-61aa-460b-b73c-72e188c6326c"
+        "outputId": "31384f07-8547-4073-8cfe-a9723f2b149d"
       },
       "cell_type": "code",
       "source": [
         "cell = 1\n",
         "input_size = 2\n",
-        "time_steps = 1    # doesn't change the number of params\n",
+        "time_steps = 1    \n",
         "\n",
         "model = keras.Sequential([\n",
         "        SimpleRNN(cell, activation='relu', use_bias=False, input_shape=(time_steps, input_size)),\n",
@@ -93,7 +93,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "af17216b-7511-4e5f-fe98-b0d380d1b382"
+        "outputId": "4e9258a9-03e2-4c33-bbf0-08e58f9ec513"
       },
       "cell_type": "code",
       "source": [
@@ -105,8 +105,8 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[array([[-1.0456531 ],\n",
-              "        [-0.19413507]], dtype=float32), array([[-1.]], dtype=float32)]"
+              "[array([[ 1.3357459],\n",
+              "        [-0.429412 ]], dtype=float32), array([[-1.]], dtype=float32)]"
             ]
           },
           "metadata": {
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2dfbe63c-2e82-4482-ce85-8ddda35d8eba"
+        "outputId": "d5a0c443-0035-40c0-9eef-6927bf35a3a1"
       },
       "cell_type": "code",
       "source": [
@@ -168,7 +168,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Add a time step"
+        "# 2 timesteps"
       ]
     },
     {
@@ -179,13 +179,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "3a89f23c-c190-4677-a2a3-e02e779f7c31"
+        "outputId": "816bc85c-b0eb-4780-c3bb-2ce122e61ec8"
       },
       "cell_type": "code",
       "source": [
         "cell = 1\n",
         "input_size = 2\n",
-        "time_steps = 2    # doesn't change the number of params\n",
+        "time_steps = 2    \n",
         "\n",
         "model = keras.Sequential([\n",
         "        SimpleRNN(cell, activation='relu', use_bias=False, input_shape=(time_steps, input_size)),\n",
@@ -233,7 +233,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "760ffc15-5e2a-4510-aea0-d1fca702bc92"
+        "outputId": "f393dcfb-130c-4793-d601-cd83bb0748f2"
       },
       "cell_type": "code",
       "source": [
@@ -274,7 +274,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "dbf319dd-0627-4357-80ad-3454ac8a6478"
+        "outputId": "e7b1aa40-cc51-4709-dafd-1a7ca1046800"
       },
       "cell_type": "code",
       "source": [
@@ -315,7 +315,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "0d4e73c4-a519-4b7e-9324-4653a3293e6a"
+        "outputId": "ba09e165-a0c6-47b5-bc31-aaaf36e43e27"
       },
       "cell_type": "code",
       "source": [
@@ -355,7 +355,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Add another timestep"
+        "# 3 timesteps"
       ]
     },
     {
@@ -366,13 +366,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "2658c6f1-a467-4513-f40b-d3618f476fe2"
+        "outputId": "caaca348-7c66-466b-b3c1-86f1b7bb06a7"
       },
       "cell_type": "code",
       "source": [
         "cell = 1\n",
         "input_size = 2\n",
-        "time_steps = 3    # doesn't change the number of params\n",
+        "time_steps = 3    \n",
         "\n",
         "model = keras.Sequential([\n",
         "        SimpleRNN(cell, activation='relu', use_bias=False, input_shape=(time_steps, input_size)),\n",
@@ -420,7 +420,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "277d002d-e68e-419f-ef0d-0e04488732c2"
+        "outputId": "4cc96302-ee6c-4cf7-c70e-159d8f7393bd"
       },
       "cell_type": "code",
       "source": [
@@ -461,7 +461,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Add another input"
+        "# Add another example"
       ]
     },
     {
@@ -472,7 +472,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "bece2e30-dace-4b71-a05d-18b7421e1e8b"
+        "outputId": "0a2e776f-b689-43b7-97c3-6d4a2ef3b4c8"
       },
       "cell_type": "code",
       "source": [
@@ -513,19 +513,6 @@
     },
     {
       "metadata": {
-        "id": "GhB8blY7hGrD",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "sDdCJYo7FU9x",
         "colab_type": "text"
       },
@@ -542,7 +529,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "0dbad691-3b66-45fe-eb8d-151035827e8d"
+        "outputId": "a9c2e093-2208-48cc-9c2b-14f59e297281"
       },
       "cell_type": "code",
       "source": [
@@ -586,7 +573,7 @@
         "        i_b = get_bit(i, time_steps)\n",
         "        j_b = get_bit(j, time_steps)\n",
         "        x.append([[i_b[i], j_b[i]] for i in range(time_steps)])\n",
-        "        y.append([[k] for k in get_bit(i+j, 8)])\n",
+        "        y.append([get_bit(i+j, 8)[-1]])\n",
         "    "
       ],
       "execution_count": 0,
@@ -600,11 +587,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "b48f42e2-2e8d-4005-84b8-3e78a5295667"
+        "outputId": "fb885bdf-8999-4ac1-9019-25cdfc72e61f"
       },
       "cell_type": "code",
       "source": [
-        "i = 256*11 + 5 # 256*3 + 5\n",
+        "i = 256*128#256*11 + 5 # 256*3 + 5\n",
         "print(x[i])\n",
         "print(y[i])"
       ],
@@ -613,8 +600,8 @@
         {
           "output_type": "stream",
           "text": [
-            "[[1, 1], [1, 0], [0, 1], [1, 0], [0, 0], [0, 0], [0, 0], [0, 0]]\n",
-            "[[0], [0], [0], [0], [1], [0], [0], [0]]\n"
+            "[[0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [1, 0]]\n",
+            "[1]\n"
           ],
           "name": "stdout"
         }
@@ -642,7 +629,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "569e80e2-93f3-4043-d07d-5b759e8c8a08"
+        "outputId": "065c7e4e-0df1-461b-e82c-e36ea768bda0"
       },
       "cell_type": "code",
       "source": [
@@ -675,7 +662,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7787d0ee-aef6-458d-96a6-ff40f9b6f197"
+        "outputId": "5dba4178-1d14-4ed7-fbf3-b0f32de053fd"
       },
       "cell_type": "code",
       "source": [
@@ -688,7 +675,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(65536, 8, 1)"
+              "(65536, 1)"
             ]
           },
           "metadata": {
@@ -716,17 +703,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 207
         },
-        "outputId": "24aba294-b241-4332-df9b-1745d79cd9dd"
+        "outputId": "56948028-be23-42c9-b627-70bfb8a1e972"
       },
       "cell_type": "code",
       "source": [
         "cell = 8\n",
         "input_size = 2\n",
-        "time_steps = 8    # doesn't change the number of params\n",
+        "time_steps = 8    \n",
         "\n",
         "model = keras.Sequential([\n",
-        "        #SimpleRNN(cell, activation='relu', return_sequences=True, use_bias=False, input_shape=(time_steps, input_size)),\n",
-        "        LSTM(cell, activation='relu', return_sequences=True, use_bias=False, input_shape=(time_steps, input_size)),\n",
+        "        SimpleRNN(cell, activation='relu', use_bias=False, input_shape=(time_steps, input_size)),\n",
+        "        #LSTM(cell, activation='relu', use_bias=False, input_shape=(time_steps, input_size)),\n",
         "        Dense(1, activation='relu', use_bias=False)    \n",
         "])\n",
         "model.summary()"
@@ -739,12 +726,12 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "lstm (LSTM)                  (None, 8, 8)              320       \n",
+            "simple_rnn_3 (SimpleRNN)     (None, 8)                 80        \n",
             "_________________________________________________________________\n",
-            "dense (Dense)                (None, 8, 1)              8         \n",
+            "dense (Dense)                (None, 1)                 8         \n",
             "=================================================================\n",
-            "Total params: 328\n",
-            "Trainable params: 328\n",
+            "Total params: 88\n",
+            "Trainable params: 88\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
@@ -761,7 +748,7 @@
       "cell_type": "code",
       "source": [
         "model.compile(optimizer='adam', # tf.keras.optimizers.SGD(lr=0.01),\n",
-        "              loss='mean_squared_error',\n",
+        "              loss='binary_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
       "execution_count": 0,
@@ -775,11 +762,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 380
         },
-        "outputId": "54a57432-ddd2-4369-c599-ae65ad810b91"
+        "outputId": "bd79da45-8dfc-4971-9197-64c33c9ad90f"
       },
       "cell_type": "code",
       "source": [
-        "model.fit(x, y, epochs=10)  "
+        "model.fit(x, y, epochs=10)    # training in colab is 4x faster than my PC!?!"
       ],
       "execution_count": 23,
       "outputs": [
@@ -787,25 +774,25 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "65536/65536 [==============================] - 11s 170us/step - loss: 0.2086 - acc: 0.6860\n",
+            "65536/65536 [==============================] - 4s 62us/step - loss: 1.3914 - acc: 0.4340\n",
             "Epoch 2/10\n",
-            "65536/65536 [==============================] - 10s 156us/step - loss: 0.0049 - acc: 0.9980\n",
+            "65536/65536 [==============================] - 4s 55us/step - loss: 0.7431 - acc: 0.4791\n",
             "Epoch 3/10\n",
-            "65536/65536 [==============================] - 10s 157us/step - loss: 3.6902e-04 - acc: 1.0000\n",
+            "65536/65536 [==============================] - 4s 55us/step - loss: 0.5767 - acc: 0.6282\n",
             "Epoch 4/10\n",
-            "65536/65536 [==============================] - 10s 159us/step - loss: 1.4697e-04 - acc: 1.0000\n",
+            "65536/65536 [==============================] - 4s 55us/step - loss: 0.3704 - acc: 0.8617\n",
             "Epoch 5/10\n",
-            "65536/65536 [==============================] - 10s 159us/step - loss: 8.1410e-05 - acc: 1.0000\n",
+            "65536/65536 [==============================] - 4s 55us/step - loss: 0.0745 - acc: 0.9845\n",
             "Epoch 6/10\n",
-            "65536/65536 [==============================] - 10s 156us/step - loss: 5.3531e-05 - acc: 1.0000\n",
+            "65536/65536 [==============================] - 4s 54us/step - loss: 0.0027 - acc: 1.0000\n",
             "Epoch 7/10\n",
-            "65536/65536 [==============================] - 10s 157us/step - loss: 3.9429e-05 - acc: 1.0000\n",
+            "65536/65536 [==============================] - 4s 55us/step - loss: 1.3837e-04 - acc: 1.0000\n",
             "Epoch 8/10\n",
-            "65536/65536 [==============================] - 10s 158us/step - loss: 3.0856e-05 - acc: 1.0000\n",
+            "65536/65536 [==============================] - 4s 56us/step - loss: 3.3025e-05 - acc: 1.0000\n",
             "Epoch 9/10\n",
-            "65536/65536 [==============================] - 10s 157us/step - loss: 2.4009e-05 - acc: 1.0000\n",
+            "65536/65536 [==============================] - 4s 56us/step - loss: 3.7986e-05 - acc: 1.0000\n",
             "Epoch 10/10\n",
-            "65536/65536 [==============================] - 10s 159us/step - loss: 1.6722e-05 - acc: 1.0000\n"
+            "65536/65536 [==============================] - 4s 55us/step - loss: 8.7531e-06 - acc: 1.0000\n"
           ],
           "name": "stdout"
         },
@@ -813,7 +800,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f11e2fd5d68>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f25609adeb8>"
             ]
           },
           "metadata": {
@@ -825,30 +812,18 @@
     },
     {
       "metadata": {
-        "id": "xgOTQo8hV8xn",
+        "id": "tQUX0HR1rytu",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "922ffa5a-d995-4421-a390-f58af3b45f86"
+        "outputId": "4fe1108b-c53c-4ba4-ce18-98b31a0aa9e2"
       },
       "cell_type": "code",
       "source": [
-        "\n",
-        "count = 0\n",
-        "\n",
-        "\n",
-        "for i in range(len(x)):\n",
-        "  xi = x[i].reshape(1, 8, 2)\n",
-        "  yi = model.predict(xi).reshape(8, 1)\n",
-        "  for j in range(len(yi)):\n",
-        "    if y[i][j][0] != (0 if yi[j][0] < 0.5 else 1):\n",
-        "      count += 1\n",
-        "      break\n",
-        "count\n",
-        "\n",
-        "\n"
+        "a = model.predict_classes(x)\n",
+        "all(a == y)"
       ],
       "execution_count": 24,
       "outputs": [
@@ -856,7 +831,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "True"
             ]
           },
           "metadata": {
@@ -868,7 +843,119 @@
     },
     {
       "metadata": {
-        "id": "tQUX0HR1rytu",
+        "id": "xgOTQo8hV8xn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def add(a, b):\n",
+        "  bit = max(a.bit_length(), b.bit_length()) + 1\n",
+        "\n",
+        "  a = get_bit(a, bit)\n",
+        "  b = get_bit(b, bit)\n",
+        "  c = [[0,0] for i in range(7)]\n",
+        "  \n",
+        "  result = []\n",
+        "  for i in range(bit):\n",
+        "    c.append([a[i], b[i]])\n",
+        "    x = np.array(c)\n",
+        "    x = x.reshape(1,8,2)\n",
+        "    y = model.predict_classes(x)[0][0]\n",
+        "    result.append(y)\n",
+        "    c = c[1:]\n",
+        "    assert y == 0 or y == 1, y\n",
+        "    assert len(c) == 7\n",
+        "\n",
+        "  r = 0\n",
+        "  for i in reversed(result):\n",
+        "    r <<= 1\n",
+        "    r += int(i)\n",
+        "  return r"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "upEVVvEBDf7X",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "52e642f3-1068-415c-d801-965d0babe034"
+      },
+      "cell_type": "code",
+      "source": [
+        "print(add(0,0))\n",
+        "print(add(0,1))\n",
+        "print(add(1,0))\n",
+        "print(add(1,1))\n",
+        "print(add(1234567812345678,8765432187654321))"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "9999999999999999\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "jqEUkvuc3zaa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        },
+        "outputId": "388fe915-ef22-4fe5-c42b-396128917c2e"
+      },
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "# there are some errors due to no carry bit\n",
+        "for i in range(10):\n",
+        "  a = random.getrandbits(128)\n",
+        "  b = random.getrandbits(128)\n",
+        "  r = add(a, b)\n",
+        "  if r != a + b:\n",
+        "    print('x', a, b, r)\n",
+        "  else:\n",
+        "    print('o', a, b, r)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "o 259282831300135068981371319005529531294 79504777755290544244469175521251298585 338787609055425613225840494526780829879\n",
+            "x 197988367563467979405760615468320721522 73924822643355974019059526480379902351 271913190206823953424820141948700623361\n",
+            "o 56113787733831585266392060346988265062 24156440481792064250946725018471923852 80270228215623649517338785365460188914\n",
+            "o 127052996698209027309732136654439786246 324111033920428099453743665024420148424 451164030618637126763475801678859934670\n",
+            "x 40108008484855863954290620318384311039 187672941798042752541814643606179255031 227780950282898616496105263924496457206\n",
+            "o 242390294915243331110714829992880596314 207487034073301027568580120715521099664 449877328988544358679294950708401695978\n",
+            "x 149959977286226242532151911385338078847 43492134506682605816109317854000521586 193452101651704046522426017265712957425\n",
+            "o 265451000625497420634163825293557595459 67760954602212774012330608484730954367 333211955227710194646494433778288549826\n",
+            "o 209527009907326260553662467706838282111 286193996933608026413804374083279036444 495721006840934286967466841790117318555\n",
+            "o 226935438080274562926439800565904784399 154400301486574701103856689153834059743 381335739566849264030296489719738844142\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "HPSG8ZvvCVqV",
         "colab_type": "code",
         "colab": {}
       },
