--- a/Keras RNN.ipynb
+++ b/Keras RNN.ipynb
@@ -36,10 +36,18 @@
       },
       "cell_type": "code",
       "source": [
+        "# colab.research.google.com\n",
         "import tensorflow as tf\n",
-        "from tensorflow.keras.layers import *\n",
         "from tensorflow import keras\n",
-        "import numpy as np"
+        "from tensorflow.keras.layers import *\n",
+        "import numpy as np\n",
+        "\n",
+        "'''\n",
+        "# labs.cognitiveclass.ai\n",
+        "import keras\n",
+        "from keras.layers import *\n",
+        "import numpy as np\n",
+        "'''"
       ],
       "execution_count": 0,
       "outputs": []
